fix img stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -12519,8 +12519,8 @@ header.masthead .h1 {
 @media (max-width: 425px) {
   .img-fluid {
     max-width: 100%;
-    height: 100%;
     max-height: 100%;
+    height: auto;
     padding: 0.25rem 0.25rem;
   }
 }
